[gd_scene load_steps=5 format=2]

[ext_resource path="res://Screens/ScreenWithMenuElements.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/TextFont_Large.tres" type="DynamicFont" id=2]
[ext_resource path="res://Screens/ScreenSelectEra/OverlayDownloadPck.gd" type="Script" id=3]
[ext_resource path="res://addons/file_downloader/file_downloader.gd" type="Script" id=4]

[node name="OverlayDownloadPck" instance=ExtResource( 1 )]
script = ExtResource( 3 )
PrevScreen = "ScreenSelectEra"
NextScreen = "ScreenSelectEra"
HandlePhysicalBButton = false
ThisScreenIsAnOverlay = true
fileToDownload = "Reborn.pck"

[node name="ColorRect" type="ColorRect" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="BackButton" parent="." index="2"]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="." index="5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -77.0
margin_right = 640.0
margin_bottom = 77.0

[node name="Label" type="Label" parent="VBoxContainer" index="0"]
margin_right = 1280.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Downloading ???"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer" index="1"]
margin_top = 79.0
margin_right = 1280.0
margin_bottom = 154.0
rect_min_size = Vector2( 1280, 0 )
custom_fonts/font = ExtResource( 2 )

[node name="FileDownloader" type="HTTPRequest" parent="." index="6"]
script = ExtResource( 4 )
save_path = "user://"

[connection signal="downloads_finished" from="FileDownloader" to="." method="_on_FileDownloader_downloads_finished"]
[connection signal="stats_updated" from="FileDownloader" to="." method="_on_FileDownloader_stats_updated"]
